Adam's quick fix for text-diff helper spilling onto page

--- a/modules/text-diff/text-diff.css
+++ b/modules/text-diff/text-diff.css
@@ -5,3 +5,8 @@
 #text-diff div, #width-calc div{
   float: left;
 }
+
+#width-calc{
+  position: absolute;
+  top: -100000px;
+}
